src/shared/frames/css/frames.css
@font-face {
    font-family: 'icomoon';
    src:url('../../fonts/icomoon.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

/*
    General frames styling
*/
body {
	margin: 5px;
	background-color: #f2f2f2;
	font-family: 'Roboto Slab', serif;
}

.gpii-prefsEditor-pmtContainer {
	display: table;
	font-size: 1.2em;	
}

.gpii-prefsEditor-frameIcon {
	font-family: icomoon;
}

.gpii-prefsEditor-preferenceSetSelectionButton {
	display: table-cell;
	width: 50%;
	text-align: center;
	padding: 5px;
	white-space: nowrap;
	line-height: 1.2em;
	font-size: 1.2em;
}

.gpii-prefsEditor-preferenceSetSelectionButtonSelected {
	border: 3px solid #fffbd9;
	border-radius: 5px;
	color: #fffbd9;
	cursor: pointer;
}

.gpii-prefsEditor-preferenceSetSelectionButtonGrayed {
	color: #aeb5b6;
	cursor: default;
}

.gpii-prefsEditor-preferenceSetSelectionButtonMyPreferences:before {
	content: "\e00a"
}

.gpii-prefsEditor-preferenceSetSelectionButtonAllPreferences:before {
	content: "\e00b"
}

.gpii-prefsEditor-preferenceSetSelectionButtonLabel {
	vertical-align: top;
	cursor: inherit;
	font-family: 'Roboto Slab', serif;
}

.gpii-prefsEditor-preferencesContainer {
	height: 500px;
	overflow: auto;
}

.gpii-prefsEditor-preferenceSetSelectionHeader {
	display: table;
	background-color: #8c9597;
	padding: 10px;
}

.gpii-prefsEditor-preferences {
	height: 1000px; /* for testing only */
	background-color: #ced7d9;
	padding: 10px;
}

.gpii-pmt-bottomRow {
	text-align: right;
}

.gpii-prefsEditor-save {
	font-family: 'Roboto Slab', serif;
	background-color: #4C5259;
    border-radius: 5px;
    color: #FFFFFF;
    cursor: pointer;
    margin: 0.1em 0.1em 0.1em -1.5em;
    padding: 0.4em 0.4em 0.4em 1.5em;
    position: relative;
    font-size: 1.2em;
    vertical-align: baseline;
}

.gpii-pmt-saveAndApplyButtonLabel {
	cursor: pointer;
    position: relative;
    vertical-align: middle;
    z-index: 1;
    color: #FFFFFF;
    font-size: 1.2em;
    left: 0.1em;
}

.gpii-pmt-saveAndApplyButtonLabel:before {
	content: "\e00b"
}

